--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/preact": "^2.2.0",
+    "@astrojs/rss": "^2.4.3",
+    "astro": "^2.4.1",
+    "preact": "^10.15.1"
   }
 }
